fix: use rem and allow wrap PageCookiesWidget

--- a/packages/style/scss/toast.scss
+++ b/packages/style/scss/toast.scss
@@ -33,6 +33,11 @@
   transition: $standard-transition;
 }
 
+.b-toast,
+.b-toaster.b-toaster-bottom-left  .b-toaster-slot {
+  max-width: min(100vw, toRem(350));
+}
+
 .modal-open .b-toaster {
   z-index: 1039;
 }
